# psign

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci-unix.yml  dotnet-tool.yml  parity-extensions.yml  release.yml  rust-sip-parity.yml  windows.yml
crates/psign-authenticode-trust/: Cargo.toml
crates/psign-authenticode-trust/src/: anchor.rs  authroot_ctl.rs  chain.rs  inspect.rs  lib.rs  online.rs  policy.rs  rfc3161_extract.rs  trust_pkcs7.rs  trust_verify_cab.rs  trust_verify_catalog.rs  trust_verify_detached.rs  trust_verify_esd.rs  trust_verify_msi.rs  trust_verify_pe.rs  verification_instant.rs
crates/psign-azure-kv-rest/: Cargo.toml
crates/psign-azure-kv-rest/src/: lib.rs
crates/psign-azure-kv-rest/tests/: kv_rest_mock.rs
crates/psign-codesigning-rest/: Cargo.toml
crates/psign-codesigning-rest/src/: lib.rs
crates/psign-codesigning-rest/tests/: codesign_rest_mock.rs
crates/psign-digest-cli/: Cargo.toml
crates/psign-digest-cli/src/: lib.rs  main.rs
crates/psign-digest-cli/tests/: cli_pe_digest.rs
crates/psign-opc-sign/: Cargo.toml
crates/psign-opc-sign/src/: lib.rs  nuget.rs  opc.rs  vsix.rs
crates/psign-sip-digest/: Cargo.toml
crates/psign-sip-digest/src/: cab_digest.rs  catalog_digest.rs  esd_digest.rs  lib.rs  msi_digest.rs  msix_digest.rs  page_hashes.rs  pe_embed.rs  pe_sign.rs  pkcs7.rs  pkcs7_wire.rs  ps_script.rs  rdp.rs  timestamp.rs  wsh_script.rs
crates/signtool-authenticode-trust/: Cargo.toml
crates/signtool-authenticode-trust/src/: authroot_cab.rs  inspect.rs  lib.rs  rfc3161_extract.rs  trust_pkcs7.rs  trust_verify_cab.rs  trust_verify_catalog.rs  trust_verify_detached.rs  trust_verify_pe.rs  verification_instant.rs
crates/signtool-azure-kv-rest/: Cargo.toml
crates/signtool-azure-kv-rest/src/: lib.rs
crates/signtool-azure-kv-rest/tests/: kv_rest_mock.rs
crates/signtool-codesigning-rest/: Cargo.toml
crates/signtool-codesigning-rest/src/: lib.rs
crates/signtool-codesigning-rest/tests/: codesign_rest_mock.rs
crates/signtool-digest-cli/: Cargo.toml
crates/signtool-digest-cli/src/: main.rs
crates/signtool-digest-cli/tests/: cli_pe_digest.rs
crates/signtool-sip-digest/: Cargo.toml
crates/signtool-sip-digest/src/: cab_digest.rs  catalog_digest.rs  esd_digest.rs  lib.rs  msi_digest.rs  msix_digest.rs  pe_digest.rs  pe_embed.rs  pkcs7.rs  pkcs7_wire.rs  ps_script.rs  timestamp.rs  verify_pe.rs  wsh_script.rs
docs/: authenticode-trust-stack.md  authroot-linux-verify.md  ci-parity.md  cli-parity-backlog.md  gap-analysis-signing-platforms.md  linux-signing-pipelines.md  migration-artifact-signing.md  migration-azuresigntool.md  parity-audit.md  parity-matrix.md  plan-linux-authenticode-trust-verify.md  plan-openauthenticode-parity.md  psa-interoperability.md  psign-cli-matrix.json  psign-cli-matrix.md  reversing-playbook-authenticode.md  roadmap-authenticode-linux.md  rust-sip-architecture.md  rust-sip-gaps.md  rust-sip-machine-registry.md  rust-sip-msix-spike.md  rust-sip-spec-refs.md  rust-sip-threat-model.md  signtool-cli-matrix.json  signtool-cli-matrix.md  windows-signing-components.md  writable-signing-binaries.md
nuget/: pack-psign-dotnet-tool.ps1  test-dotnet-tool.ps1
nuget/scripts/: Import-PsignArtifacts.ps1
nuget/tool/: Devolutions.Psign.Tool.csproj  Program.cs  README.md
scripts/: collect-binaries.ps1  copy-windows-signing-binaries.ps1  linux-portable-validation.sh  msix-parity-sign.ps1  prepare-writable-signing-binaries.ps1  run-local-online-cert-parity.ps1  run-local-timestamp-parity.ps1  run-parity-diff.ps1  runtime-module-trace.ps1  rust-sip-digest-oracle.ps1  rust-sip-parity-pe.ps1  sip-format-smoke.ps1
scripts/ci/: bootstrap-devolutions-authenticode.ps1  build-catalog-pe-pkcs7-fixture.ps1  build-catalog-workflow-fixtures.ps1  build-code-signing-vector-corpus.ps1  build-code-signing-vector-samples.ps1  build-msi-signature-stub.ps1  build-package-signing-fixtures.ps1  build-signed-cab-fixture.ps1  pack-minimal-msix.ps1  pack-minimal-winmd.ps1  prepare-parity-fixtures.ps1  run-exhaustive-parity-ci.ps1
src/: cert_store.rs  cli.rs  lib.rs  main.rs  native_argv.rs  portable_sign.rs  rdp.rs  response_argv.rs
src/win/: artifact_signing_rest.rs  azure_kv_sign.rs  catdb.rs  cert_props.rs  code_sign_format.rs  common.rs  inspect_signature.rs  mod.rs  rdp.rs  remove_signature.rs  remove_unauth.rs  sealing.rs  sign.rs  sign_core.rs  sign_digest_pipeline.rs  timestamp.rs  timestamp_core.rs  verify.rs  verify_authcode.rs  verify_catalog.rs  verify_catalog_resolve.rs  verify_chain.rs  verify_detached.rs  verify_format.rs
src/win/sip_rust/: mod.rs  sign_cab.rs  sign_catalog.rs  sign_esd.rs  sign_msi.rs  sign_msix.rs  sign_pe.rs  sign_script.rs
tests/: cert_store_cli.rs  cli_pe_digest.rs  cli_verify_filters.rs  corpus_sign_verify.rs  cross_cli_windows.rs  fixture_vector_manifest.rs  parity_signtool.rs  sip_rust_pe.rs
tests/fixtures/: README.md  code-signing-vectors.json  corpus.json  unsigned-sample.js  unsigned-sample.ps1  unsigned-sample.psd1  unsigned-sample.psm1  unsigned-sample.vbs  unsigned-sample.wsf
tests/fixtures/cab-authenticode-upstream/: README.md  tiny-signed.cab
tests/fixtures/catalog-authenticode-upstream/: README.md  tiny32-content.cat
tests/fixtures/catalog-workflows/: README.md  multi-member.cat  single-binary.cat  single-pe.cat  single-text.cat
tests/fixtures/devolutions-authenticode/: README.md
tests/fixtures/generated-signed/: generated-signed-vectors.json
tests/fixtures/generated-unsigned/: generated-vectors.json
tests/fixtures/msi-authenticode-upstream/: README.md
tests/fixtures/msix-minimal/: AppxManifest.xml
tests/fixtures/package-signing/: package-signing-fixtures.json
tests/fixtures/rdp/: malformed-lines.rdp  minimal.rdp  missing-full-address.rdp  partial-signed-scope.rdp  signed-test-cert.rdp  signscope-missing-field.rdp  unsigned-utf16be-bom.rdp  unsigned-utf16be-nobom.rdp  unsigned-utf16le-bom.rdp  unsigned-utf16le-nobom.rdp  unsigned-utf8-bom.rdp  unsigned-utf8.rdp  with-stale-signature.rdp
(+180 files in other folders)
