[workspace]
members = [
    "crates/signtool-sip-digest",
    "crates/signtool-digest-cli",
    "crates/signtool-authenticode-trust",
]
# Bare `cargo build` / `cargo test` at the repo root builds portable crates only (Linux/macOS friendly).
# Use `-p signtool-rs` or `cargo build --workspace` for the full workspace including the Windows binary crate.
default-members = [
    "crates/signtool-sip-digest",
    "crates/signtool-digest-cli",
    "crates/signtool-authenticode-trust",
]
resolver = "2"

[package]
name = "signtool-rs"
version = "0.1.0"
edition = "2024"
description = "Rust port of the Windows SDK signtool.exe (Authenticode sign/verify/timestamp) with portable digest helpers."

[dependencies]
signtool-sip-digest = { path = "crates/signtool-sip-digest" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
goblin = "0.9"

[target.'cfg(windows)'.dependencies]
uuid = "1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_WinTrust",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(windows)'.dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "signtool-windows"
path = "src/main.rs"

[[bin]]
name = "depgraph"
path = "src/bin/depgraph.rs"
