[workspace]
members = [
    "crates/psign-sip-digest",
    "crates/psign-digest-cli",
    "crates/psign-authenticode-trust",
    "crates/psign-codesigning-rest",
    "crates/psign-azure-kv-rest",
]
# Bare `cargo build` / `cargo test` at the repo root builds portable crates only (Linux/macOS friendly).
# Use `-p psign` or `cargo build --workspace` for the full workspace including the Windows binary crate.
default-members = [
    "crates/psign-sip-digest",
    "crates/psign-digest-cli",
    "crates/psign-authenticode-trust",
    "crates/psign-codesigning-rest",
    "crates/psign-azure-kv-rest",
]
resolver = "2"

[package]
name = "psign"
version = "0.1.0"
edition = "2024"
description = "Rust port of the Windows SDK signtool.exe (Authenticode sign/verify/timestamp) with portable digest helpers."

[features]
default = []
## Azure Key Vault signing (`AuthenticatorDigestSign` callback + REST); enables Azure-shaped CLI flags on `sign`.
azure-kv-sign = [
    "dep:psign-azure-kv-rest",
    "dep:reqwest",
    "psign-digest-cli/azure-kv-sign-portable",
]
## Azure Artifact Signing / Trusted Signing **data-plane** hash signing (REST LRO); experimental helper command `artifact-signing-submit`.
artifact-signing-rest = ["dep:psign-codesigning-rest", "psign-digest-cli/artifact-signing-rest"]

[dependencies]
psign-sip-digest = { path = "crates/psign-sip-digest" }
psign-authenticode-trust = { path = "crates/psign-authenticode-trust" }
psign-digest-cli = { path = "crates/psign-digest-cli" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
goblin = "0.9"

[target.'cfg(windows)'.dependencies]
x509-cert = "0.2.5"
glob = "0.3"
rayon = "1.10"
psign-azure-kv-rest = { path = "crates/psign-azure-kv-rest", optional = true }
psign-codesigning-rest = { path = "crates/psign-codesigning-rest", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
uuid = "1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_WinTrust",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
] }

[target.'cfg(windows)'.dev-dependencies]
assert_cmd = "2"
predicates = "3"
psign-authenticode-trust = { path = "crates/psign-authenticode-trust" }

[[bin]]
name = "psign-tool"
path = "src/main.rs"

[[bin]]
name = "psign-tool-windows"
path = "src/bin/psign_tool_windows.rs"

[[bin]]
name = "psign-azure-sign-tool-compat"
path = "src/bin/azure_sign_tool_compat.rs"

[[bin]]
name = "psign-depgraph"
path = "src/bin/depgraph.rs"
