[package]
name = "psign-digest-cli"
version = "0.1.0"
edition = "2024"
description = "Linux/macOS-friendly CLI over portable Authenticode SIP digests (psign-sip-digest)"

[features]
default = []
## Azure Code Signing `:sign` LRO on Linux/macOS (same API as `psign-tool artifact-signing-submit`).
artifact-signing-rest = ["dep:psign-codesigning-rest"]
## Azure Key Vault `keys/sign` on Linux/macOS (digest file → signature bytes / base64); embedding still requires Windows.
azure-kv-sign-portable = ["dep:psign-azure-kv-rest", "dep:base64", "dep:reqwest"]
## RFC 3161 TSA HTTP POST (`rfc3161-timestamp-http-post`) using Rustls (same optional `reqwest` crate as KV portable).
timestamp-http = ["dep:reqwest"]

[lib]
name = "psign_digest_cli"
path = "src/lib.rs"

[[bin]]
name = "psign-tool-portable"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
psign-authenticode-trust = { path = "../psign-authenticode-trust" }
psign-sip-digest = { path = "../psign-sip-digest" }
psign-codesigning-rest = { path = "../psign-codesigning-rest", optional = true }
psign-azure-kv-rest = { path = "../psign-azure-kv-rest", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rand = "0.8"
rsa = { version = "0.9.10", features = ["sha2"] }
sha2 = "0.10"
tempfile = "3"
x509-cert = { version = "0.2.5", features = ["builder"] }
