[package]
name = "signtool-authenticode-trust"
version = "0.1.0"
edition = "2024"
description = "Portable Authenticode PKCS#7 trust verification (anchors, chain, EKU) using picky-rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
cms = "0.2.3"
der = { version = "0.7", features = ["derive"] }
digest = "0.10"
sha1 = { version = "0.10", default-features = false }
sha2 = "0.10"
authenticode = { version = "0.5.0", features = ["std", "object"] }
signtool-sip-digest = { path = "../signtool-sip-digest" }
picky = { version = "7.0.0-rc.23", features = ["pkcs7", "time_conversion"] }
picky-asn1-x509 = "0.15.4"
time = "0.3"
x509-cert = "0.2.5"
cab = "0.6"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
