[package]
name = "signtool-digest-cli"
version = "0.1.0"
edition = "2024"
description = "Linux/macOS-friendly CLI over portable Authenticode SIP digests (signtool-sip-digest)"

[features]
default = []
## Azure Code Signing `:sign` LRO on Linux/macOS (same API as `signtool-windows artifact-signing-submit`).
artifact-signing-rest = ["dep:signtool-codesigning-rest"]

[[bin]]
name = "signtool-portable"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signtool-authenticode-trust = { path = "../signtool-authenticode-trust" }
signtool-sip-digest = { path = "../signtool-sip-digest" }
signtool-codesigning-rest = { path = "../signtool-codesigning-rest", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
